Fix display alignment

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,8 @@ header > h1 {
 
 main {
   padding: 30px 30px 10px;
+  width: 860px;
+  margin: 0 auto;
 }
 
 .ingredient-form {
@@ -41,8 +43,6 @@ main {
   padding: 9px 13px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
   flex-grow: 1;
-  min-width: 150px;
-  max-width: 400px;
 }
 
 .ingredient-form > button {
